# intellij-example

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  MODULE.bazel  README.md  maven_install.json  service.yml
.bazel/bazelrc/: common.bazelrc
.github/: CODEOWNERS
src/: BUILD.bazel
src/main/java/io/confluent/templatesvc/configuration/: Hello.java
src/main/java/protos/dummyservice/v1/: BUILD.bazel  dummyservice.proto
src/main/java/protos/helloworld/v1/: BUILD.bazel  helloworld.proto
src/main/resources/: application.properties  log4j2.properties
src/main/resources/static/: index.html
src/test/java/io/confluent/templatesvc/configuration/: HelloTest.java
