bazel_dep(name = "aspect_bazel_lib", version = "2.9.4")
bazel_dep(name = "abseil-cpp", version = "20250127.0", repo_name = "com_google_absl")

# Use an internal fork of `rules_jvm_external` due to:
# https://confluentinc.atlassian.net/browse/DP-14496
# https://confluentinc.atlassian.net/browse/DP-14497
# TODO: We should set this back to the official releases once this fork that supports
# exclusions within POM files is upstreamed and released.
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_java", version = "8.15.0")
bazel_dep(name = "contrib_rules_jvm", version = "0.28.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# https://github.com/bazel-contrib/rules_jvm_external?tab=readme-ov-file#resolving-user-specified-and-transitive-dependency-version-conflicts
maven.install(
    artifacts = [
        "org.junit.jupiter:junit-jupiter-engine:5.11.4",
        "org.junit.jupiter:junit-jupiter-api:5.11.4",
        "org.junit.platform:junit-platform-launcher:1.11.4",
        "org.junit.platform:junit-platform-reporting:1.11.4",
        "org.apache.logging.log4j:log4j-layout-template-json:2.25.1",
        "org.apache.logging.log4j:log4j-slf4j2-impl:2.25.1",
        "org.slf4j:slf4j-api:2.0.16",
        "org.slf4j:slf4j-simple:2.0.16",
    ],
    fail_if_repin_required = True,
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repin_instructions = "REPIN=1 bazel run @maven//:pin",
    repositories = [
        "https://repo1.maven.org/maven2/",
    ],
    use_credentials_from_home_netrc_file = True,
    version_conflict_policy = "pinned",
)
use_repo(
    maven,
    "maven",
    # BEGIN __INCLUDE_PROTO__
    "protobuf_maven",
    # END __INCLUDE_PROTO__
)

# bazel_dep(name = "container_structure_test", version = "1.19.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a", repo_name = "com_google_googleapis")

switched_rules = use_extension("@com_google_googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(java = True)

# BEGIN __INCLUDE_GRPC_JAVA__
bazel_dep(name = "grpc-java", version = "1.73.0", repo_name = "io_grpc_grpc_java")
git_override(
    module_name = "grpc-java",
    remote = "https://github.com/grpc/grpc-java.git",
    tag = "v1.73.0",
)
# END __INCLUDE_GRPC_JAVA__

# BEGIN __INCLUDE_PROTO__
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "grpc-proto", version = "0.0.0-20240627-ec30f58", repo_name = "io_grpc_grpc_proto")

# Refer to this example for buf: https://github.com/bufbuild/rules_buf/blob/main/examples/bzlmod/MODULE.bazel
bazel_dep(name = "rules_buf", version = "0.3.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")

# Override the default version of buf
buf.toolchains(version = "v1.47.2")

# See https://buf.build/docs/build-systems/bazel#buf-dependencies
buf.dependency(module = "buf.build/envoyproxy/protoc-gen-validate:daf171c6cdb54629b5f51e345a79e4dd")
buf.dependency(module = "buf.build/googleapis/googleapis:f0e53af8f2fc4556b94f482688b57223")

# Allow references to labels under @buf_deps
use_repo(buf, "buf_deps")

# Allow people to use `bazel run @rules_buf_toolchains//:buf -- --version`
use_repo(buf, "rules_buf_toolchains")

bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")

GO_VERSION = "1.24.0"

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = GO_VERSION)

bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
use_repo(
    go_deps,
)

bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")
# END __INCLUDE_PROTO__

bazel_dep(name = "aspect_rules_lint", version = "1.3.4")
bazel_dep(name = "bazel_features", version = "1.30.0")
bazel_dep(name = "aspect_rules_js", version = "2.1.2")
bazel_dep(name = "rules_multirun", version = "0.10.0")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.1",
    dev_dependency = True,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
