load("@aspect_bazel_lib//lib:tar.bzl", "tar")
load("@contrib_rules_jvm//java:defs.bzl", "java_test_suite")
load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm_external//:defs.bzl", "java_export")

# java_export extends java_library to allow maven artifacts to be uploaded.
java_export(
    name = "hello_world_app",
    srcs = glob(["main/**/*.java"]),
    maven_coordinates = "io.confluent:intellij-example:$(maven_version)",
    visibility = ["//visibility:public"],
)

# Use confluent_rules to define a test suite for java project. https://github.com/confluentinc/confluent-bazel-rules/blob/master/scala/java_junit_test_suite.bzl
# If you have scala and java in your project, you could use jvm_junit_test_suite in https://github.com/confluentinc/confluent-bazel-rules/blob/master/scala/jvm_junit_test_suite.bzl
java_test_suite(
    name = "hello_test_confluent_rules",
    size = "small",
    srcs = glob(
        ["test/**/*.java"],
    ),
    runner = "junit5",
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_simple",
    ],
    deps = [
        ":hello_world_app",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
