load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_java//java:defs.bzl", "java_library", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "helloworld_v1_proto",
    srcs = ["helloworld.proto"],
    strip_import_prefix = "/src/main/java/protos",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "helloworld_v1_java_proto",
    deps = [":helloworld_v1_proto"],
)

java_grpc_library(
    name = "helloworld_v1_java_grpc",
    srcs = [":helloworld_v1_proto"],
    deps = [":helloworld_v1_java_proto"],
)

java_library(
    name = "helloworld_v1_java_library",
    visibility = ["//:__subpackages__"],
    exports = [
        ":helloworld_v1_java_grpc",
        ":helloworld_v1_java_proto",
    ],
)
